--- a/requirements.txt
+++ b/requirements.txt
@@ -22,9 +22,13 @@ nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.6.20
 nvidia-nvtx-cu12==12.1.105
 packaging==24.1
+pandas==2.2.2
 pillow==10.4.0
 pluggy==1.5.0
 pytest==8.3.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+six==1.16.0
 sympy==1.13.1
 tomli==2.0.1
 torch==2.4.0
@@ -34,3 +38,4 @@ tqdm==4.66.5
 triton==3.0.0
 typeguard==2.13.3
 typing_extensions==4.12.2
+tzdata==2024.1
