--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,29 @@
+asttokens==2.4.1
 beartype==0.18.5
+comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
+debugpy==1.8.5
+decorator==5.1.1
 exceptiongroup==1.2.2
+executing==2.0.1
 filelock==3.15.4
+fonttools==4.53.1
 fsspec==2024.6.1
 iniconfig==2.0.0
+ipykernel==6.29.5
+ipython==8.26.0
 jaxtyping==0.2.33
+jedi==0.19.1
 Jinja2==3.1.4
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+kiwisolver==1.4.5
 MarkupSafe==2.1.5
+matplotlib==3.9.1.post1
+matplotlib-inline==0.1.7
 mpmath==1.3.0
+nest-asyncio==1.6.0
 networkx==3.3
 numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
@@ -23,19 +40,34 @@ nvidia-nvjitlink-cu12==12.6.20
 nvidia-nvtx-cu12==12.1.105
 packaging==24.1
 pandas==2.2.2
+parso==0.8.4
+pexpect==4.9.0
 pillow==10.4.0
+platformdirs==4.2.2
 pluggy==1.5.0
+prompt_toolkit==3.0.47
+psutil==6.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.18.0
+pyparsing==3.1.2
 pytest==8.3.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
+pyzmq==26.1.0
+seaborn==0.13.2
 six==1.16.0
+stack-data==0.6.3
 sympy==1.13.1
 tomli==2.0.1
 torch==2.4.0
 torchaudio==2.4.0
 torchvision==0.19.0
+tornado==6.4.1
 tqdm==4.66.5
+traitlets==5.14.3
 triton==3.0.0
 typeguard==2.13.3
 typing_extensions==4.12.2
 tzdata==2024.1
+wcwidth==0.2.13
